<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/persegi_panjang"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/description"
                android:textColor="@color/colorWhite"
                android:textStyle="italic"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/edtLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:inputType="number"
                android:hint="@string/input_length"/>

            <EditText
                android:id="@+id/edtWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:hint="@string/input_width"/>

            <Button
                android:id="@+id/btnCount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/count"/>

            <TextView
                android:id="@+id/txtRes"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/result"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>